<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Google Image Search</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="search_prompt">Enter your search here</string>
    <string name="search_label">Search</string>
    <string name="image_title_label">Image Result</string>
    <string name="title_activity_image_display">ImageDisplayActivity</string>
    <string name="title_activity_filters">FiltersActivity</string>
    <string name="advanced_search_title">Advanced search filters</string>
    <string name="image_size">Image Size</string>
    <string name="color_filter">Color Filter</string>
    <string name="image_type">Image Type</string>
    <string name="site_filter">Site Filter</string>
    <string name="_save">Save</string>
    <string name="action_share">Share</string>
    <string-array name="sizes_array">
        <item>none</item>
        <item>small</item>
        <item>medium</item>
        <item>large</item>
        <item>xlarge</item>
    </string-array>
    <string-array name="colors_array">
        <item>none</item>
        <item>black</item>
        <item>blue</item>
        <item>red</item>
        <item>green</item>
        <item>yellow</item>
        <item>brown</item>
        <item>orange</item>
        <item>pink</item>
        <item>white</item>
        <item>grey</item>
    </string-array>
    <string-array name="types_array">
        <item>none</item>
        <item>faces</item>
        <item>photo</item>
        <item>clipart</item>
        <item>lineart</item>
    </string-array>
</resources>
