<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.sophiataskova.gridimagesearch.activities.FiltersActivity">

    <TextView android:text="@string/advanced_search_title" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="20dp"
        android:layout_marginBottom="40dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp">
        <TextView android:text="@string/image_size"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_marginRight="20dp"/>
        <Spinner
            android:id="@+id/size_spinner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"></Spinner>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp">
        <TextView android:text="@string/color_filter"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_marginRight="20dp"/>
        <Spinner
            android:id="@+id/color_spinner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"></Spinner>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp">
        <TextView android:text="@string/image_type" android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_marginRight="20dp"/>
        <Spinner
            android:id="@+id/type_spinner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"></Spinner>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp">
        <TextView android:text="@string/site_filter" android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_marginRight="20dp"/>
        <EditText
            android:id="@+id/site_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

    <Button
        android:id="@+id/save_button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@android:color/background_light"
        android:text="@string/_save"
        android:textAllCaps="true"/>

</LinearLayout>
